# High-Performance-Football-Analysis-Inference-Engine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  ball_metrics.csv  calibration.yaml  cuda-repo-ubuntu2204-13-0-local_13.0.0-580.65.06-1_amd64.deb  player_metrics.csv  yolov8m.onnx  yolov8m.onnx.engine
assets/: export_yolo.py  yolov8s.onnx  yolov8s.onnx.engine
proto/: analysis.proto
results/: player_metrics.csv
src/: main.cpp  service.cpp
src/analytics/: metrics.cpp  metrics.h
src/detection/: ball_tracker.cpp  ball_tracker.h  player_tracker.cpp  player_tracker.h  yolov8.cpp  yolov8.h
src/utils/: calibration.cpp  calibration.h  config.h  kalman_filter.cpp  kalman_filter.h  logger.cpp  logger.h
